<resources xmlns:ns0="http://schemas.android.com/tools" ns0:ignore="MissingTranslation" ns0:locale="en">
    <string name="app_name">FB4</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="NavItem_Stundenplan">Timetable</string>
    <string name="NavItem_Aktuelles">News</string>
    <string name="NavItem_Aktuelles_Wirtschaft">News (Economy)</string>
    <string name="NavItem_Speiseplan">Menu</string>
    <string name="NavItem_Leeren_Raum_Suchen">Find empty room</string>
    <string name="NavItem_Ticket">NRW-Ticket</string>
    <string name="NavItem_Links_Downloads">Links/Downloads</string>
    <string name="NavItem_Feedback">Send Feedback</string>
    <string name="NavItem_Einstellungen">Settings</string>
    <string name="NavItem_Über">About</string>
    <string name="hinzufügen">Add</string>
    <string name="hinzufügen_lang">Would you like to add your own entry or an official timetable?</string>
    <string name="offStundenplan">Official timetable</string>
    <string name="eigenerEintrag">Own entry</string>
    <string name="abbrechen">Cancel</string>
    <string name="archivLaden">Load archive</string>
    <string name="bearbeiten">Edit</string>
    <string name="bis">to</string>
    <string name="downloadWirdGestartet">Downloading…</string>
    <string name="einmaligVerlegen">Move once</string>
    <string name="eintragLöschen_Frage">Delete Entry?</string>
    <string name="eintragLöschen_Frage_Lang">Do you really want to delete this entry?</string>
    <string name="eintragVerlegen">Move entry</string>
    <string name="entwickeltVon">Developed by:</string>
    <string name="fehlerBeimLaden_Speiseplan">Error loading the menu</string>
    <string name="fehlerBeimLaden_Aktuelles">Error refreshing the news</string>
    <string name="fertig">Done</string>
    <string name="findetStatt">Takes place</string>
    <string name="fälltAus">Cancelled</string>
    <string name="gruppenbuchstAnpassen">Filter by groupletter</string>
    <string name="gruppenbuchstEingeben">Please enter your groupletter:</string>
    <string name="gruppenbuchstFiltern">Filter groupletter</string>
    <string name="info">Info</string>
    <string name="internetFehlgeschlagen">Connection failed</string>
    <string name="ja">Yes</string>
    <string name="keinGültigerBuchst">Invalid groupletter</string>
    <string name="keinTitel">No title</string>
    <string name="keineNachrichtenVorhanden">No news available</string>
    <string name="keineVeranVorhanden">No events available</string>
    <string name="kursname">Coursename</string>
    <string name="kursnamenEingeben">Please enter a coursename</string>
    <string name="kurz">short</string>
    <string name="lageplan">Locationplan</string>
    <string name="löschen">Delete</string>
    <string name="nachrichtSuchen">Search news</string>
    <string name="nein">No</string>
    <string name="ok">OK</string>
    <string name="professor">Lecturer</string>
    <string name="raum">Room</string>
    <string name="sollPlanGespeichertWerden">Do you want to save the timetable?</string>
    <string name="speichern">Save</string>
    <string name="speichernSpeiseplanSort_Frage_Lang">Do you want to save the current sorting?</string>
    <string name="speichernStundenplan_Frage_Lang">Do you want to save the marked entries?</string>
    <string name="speichern_Frage">Save?</string>
    <string name="speiseart">Type of meal</string>
    <string name="speiseplan_info">You can change which menus are shown in the settings.</string>
    <string name="speiseplan_speiseart">V = Vegetarian\nS = Pork\nG = Poultry\nF = Fish\nR = Beef\nW = Deer\nL = Lamb\nK = Child\'s portion\nN = Vegan\nA = Meat from appropriate care</string>
    <string name="prüfungsplan">Audit plan</string>
    <string name="speisepläne">Menus</string>
    <string name="speisepläneWerdenGeladen">Loading the menus</string>
    <string name="speisepläneWählen">Choose the menus you want see:</string>
    <string name="studiengangWählen">Choose the course</string>
    <string name="stundenplanErhalten">Received timetable</string>
    <string name="stundenplanLöschen_Frage">Delete timetable?</string>
    <string name="stundenplanLöschen_Frage_Lang">Do you really want to delete this timetable?</string>
    <string name="stundenplanWurdeGelöscht">Timetable deleted</string>
    <string name="sucheLäuft">Searching…</string>
    <string name="teilen">Share</string>
    <string name="uhr" />
    <string name="uhrzeitFestlegen">Set time</string>
    <string name="von">From:</string>
    <string name="vonAnonym">From: anonymous</string>
    <string name="warten_dialog">Please wait…</string>
    <string name="wochentag">Day of week:</string>
    <string name="zeit">Time:</string>
    <string name="zeitplan">Schedule</string>
    <string name="zuletztAktualisiert">last updated %1$s ago</string>
    <string name="minute">minute</string>
    <string name="minuten">minutes</string>
    <string name="stunde">hour</string>
    <string name="stunden">hours</string>
    <string name="tag">day</string>
    <string name="tagen">days</string>
    <string name="eintragBearbeiten">Edit entry</string>
    <string name="sortierungWählen">Choose sorting</string>
    <string name="fehlerberichtSenden">Send bug report</string>
    <string name="fehlerberichtSenden_beschreibung">Sends a bug report to the developer after the app crashed</string>
    <string name="fhWebseite_beschreibung">Homepage of the FH Dortmund</string>
    <string name="geschlRestaurantsMarkieren">Mark  closed restaurants</string>
    <string name="geschlRestaurantsMarkieren_beschreibung">When checked, closed restaurants will be grayed out</string>
    <string name="ilias_beschreibung">E-Learning at FH Dortmund</string>
    <string name="lageplan_beschreibung">Locationplan of the university Dortmund (PDF)</string>
    <string name="ods_beschreibung">Online services for students</string>
    <string name="prüfungsplan_beschreibung">Audit plan of the current semester (PDF)</string>
    <string name="his_beschreibung">Study portal of the FH Dortmund</string>
    <string name="sonstiges">Other</string>
    <string name="speiseplan">Menu</string>
    <string name="speisepläneSortieren">Sort menus</string>
    <string name="speisepläneSortieren_beschreibung">Choose how you want to sort the menus</string>
    <string name="speisepläne_beschreibung">Choose the menus you want see</string>
    <string name="stundenplan">Timetable</string>
    <string name="stundenplanLöschen">Delete timetable</string>
    <string name="stundenplanLöschen_beschreibung">Deletes the complete timetable</string>
    <string name="zeitplan_beschreibung">Schedule of the current semester (PDF) (German)</string>
    <string name="Notif_contentText">Tap for more info</string>
    <string name="Pref_Notif_Dialog">Choose refresh frequency</string>
    <string name="Pref_Notif_Sum">Notify for new messages in News</string>
    <string name="Pref_Notif_Title">Notify for new messages</string>
    <string name="Pref_Stdp_Ausblenden_Sum">When activated, pages without events will be hidden</string>
    <string name="Pref_Stdp_Ausblenden_Title">Hide empty pages</string>
    <string name="neueNachrichten">new Messages</string>
    <string name="senden">Send</string>
    <string name="suchen">Search</string>
    <string name="farbeÄndern">Change color</string>
    <string name="fachschaftsrat">Student representatives</string>
    <string name="fsr_beschreibung">Homepage of the student representatives</string>
    <string name="kalender_export">Export to calendar</string>
    <string name="exportieren">Export</string>
    <string name="stundenplanExportiert">Timetable was exported</string>
    <string name="stundenplanNichtExportiert">Timetable could not be exported</string>
    <string name="Pref_Start_Title">Choose Launch Screen</string>
    <string name="Pref_Start_Sum">Choose which screen to launch when starting the app</string>
    <string name="einstellungen">Settings</string>
    <string name="studierbar_beschreibung">Blog and forum for students</string>
    <string name="AlteAppGefunden">Old FB4-app detected</string>
    <string name="AlteAppImport">It looks like you have the old FB4-app installed. Do you want to import your timetable?</string>
    <string name="StundenplanNichtImportiert">Timetable could not be imported</string>
    <string name="Räume_werden_gesucht">Searching free rooms</string>
    <string name="fehlerBeimLaden_Räume">Error loading free rooms</string>
    <string name="Keine_freien_räume">Currently there are no rooms available</string>
    <string name="Groß">Big</string>
    <string name="Klein">Small</string>
    <string name="Medium">Medium</string>
    <string name="frei_bis">Free until</string>
    <string name="speiseplan_ausblenden">Hide this canteen</string>
    <string name="pdf_ansehen">View PDF</string>
    <string name="rückgängig_caps">UNDO</string>
    <string name="mensaWirdNichtMehrAngezeigt">%1$s is no longer shown</string>
    <string name="AlteAppDeinstallieren">Do you want to uninstall the old app?</string>
    <string name="jetzt_importieren">Import now</string>
    <string name="StundenplanImportiert">Timetable imported</string>
    <string name="deinstallieren">Uninstall old app</string>
    <string name="Stundenplan_erstellen">Create your Timetable</string>
    <string name="Stundenplan_erstellen_abfrage">Create your schedule quite convenient and easy!</string>
    <string name="Stundenplan_erstellen_kurz">Create timetable</string>
    <string name="Speiseplan_erstellen">Create your menu!</string>
    <string name="Speiseplan_erstellen_lang">Choose what canteens you wish to see in the menu</string>
    <string name="willkommenZurNeuenApp">Welcome to the new FB4-App!</string>
    <string name="wischeNachLinksZumEinrichten">Swipe left to start the setup</string>
    <string name="skip">skip</string>
    <string name="title_activity_ticket">NRW-Ticket</string>
    <string name="login_fehlgeschlagen">Login failed</string>
    <string name="ticket_wird_heruntergeladen">Downloading ticket...</string>
    <string name="keinen_pdfreader_gefunden">Could not find PDF Reader</string>
    <string name="ticket_anzeigen">Show ticket</string>
    <string name="ticket_aus_his_herunterladen">Download NRW-Ticket from the study portal</string>
    <string name="choose_ticket">Choose existing NRW-Ticket</string>
    <string name="fh_kennung">FH-Username</string>
    <string name="passwort">Password</string>
    <string name="download">Download</string>
    <string name="ticket_wurde_heruntergeladen">Ticket has been downloaded</string>
    <string name="einloggen">Logging in</string>
    <string name="ticket_vorsemester_runterladen">Download ticket for previous semester</string>
    <string name="ticket_konnte_nicht_kopiert_werden">Ticket could not be copied</string>
    <string name="backupGefunden">Backup found</string>
    <string name="backupWiederherstellenFrage">Do you want to restore the backup?</string>
    <string name="stundenplanWiederherstellen">Restore timetable</string>
    <string name="save_credentials">Save credentials</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="update_ticket_long">Automatically update ticket at the start of a new semester</string>
    <string name="retry">Retry</string>
    <string name="types">Types:</string>
    <string name="additives">Additives:</string>
    <string name="student_label">Student:</string>
    <string name="staff_label">Staff:</string>
    <string name="guest_label">Guest:</string>
    <string name="preise">Prices:</string>
</resources>