<?xml version="1.0" encoding="utf-8"?>
<com.redbooth.WelcomePageLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/welcome_page"
    app:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:background="@color/main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/text_backup_title"
        android:gravity="center">

        <ImageView
            android:id="@+id/image_rocket_figure"
            android:layout_width="@dimen/welcomepage_image_width"
            android:layout_height="@dimen/welcomepage_image_height"
            android:src="@drawable/restorebackup" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_backup_title"
        style="@style/text_title"
        android:layout_above="@+id/text_backup_subtitle"
        android:text="@string/backupGefunden" />

    <TextView
        android:id="@+id/text_backup_subtitle"
        style="@style/text_subtitle"
        android:layout_above="@+id/button_restore"
        android:text="@string/backupWiederherstellenFrage" />

    <Button
        android:id="@+id/button_restore"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:text="@string/stundenplanWiederherstellen" />

</com.redbooth.WelcomePageLayout>
