<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fr.castorflex.android.circularprogressbar.CircularProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminate="true"
        app:cpb_color="@color/main"
        app:cpb_max_sweep_angle="300"
        app:cpb_min_sweep_angle="10"
        app:cpb_rotation_speed="1.0"
        app:cpb_stroke_width="4dp"
        app:cpb_sweep_speed="1.0"/>

    <View
        android:id="@+id/resultView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        tools:background="@drawable/download_success" />

    <TextView
        android:id="@+id/textViewState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/ticket_wird_heruntergeladen" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonShowTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/ticket_anzeigen"
            android:paddingHorizontal="@dimen/md_button_padding_horizontal"
            android:visibility="gone"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/buttonRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/retry"
            android:paddingHorizontal="@dimen/md_button_padding_horizontal"
            android:visibility="gone"
            tools:visibility="visible"/>
    </LinearLayout>


</LinearLayout>
