<?xml version="1.0" encoding="utf-8"?>
<com.redbooth.WelcomePageLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_page_layout"
    style="@style/welcome_page"
    app:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:background="@color/main">


    <LinearLayout
        android:id="@+id/layout_canteen_selection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/subtitle_menu"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <ScrollView
                    android:id="@+id/scroll_canteen_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="30dp"
                    android:requiresFadingEdge="vertical">

                    <LinearLayout
                        android:id="@+id/layout_checkboxes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <TextView
                android:id="@+id/title_menu"
                style="@style/text_title"
                android:text="@string/Speiseplan_erstellen"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/subtitle_menu"
        style="@style/text_subtitle"
        android:layout_above="@+id/button_done"
        android:text="@string/Speiseplan_erstellen_lang"/>

    <Button
        android:id="@+id/button_done"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:text="@string/fertig"/>

</com.redbooth.WelcomePageLayout>
