<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<shortcut
        android:shortcutId="ticket"
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_ticket_adaptive"
        android:shortcutShortLabel="@string/title_activity_ticket"
        android:shortcutLongLabel="@string/title_activity_ticket"
        android:shortcutDisabledMessage="@string/title_activity_ticket">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="de.fsrfb4.fb4"
            android:targetClass="de.fsrfb4.fb4.activities.ticket.TicketViewActivity" />
    </shortcut>-->
    <shortcut
        android:shortcutId="room"
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_location_adaptive"
        android:shortcutShortLabel="@string/NavItem_Leeren_Raum_Suchen"
        android:shortcutLongLabel="@string/NavItem_Leeren_Raum_Suchen"
        android:shortcutDisabledMessage="@string/NavItem_Leeren_Raum_Suchen">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="de.fsrfb4.fb4"
            android:targetClass="de.fsrfb4.fb4.activities.MainActivity">
            <extra
                android:name="shortcut_fragment"
                android:value="room"/>
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="menu"
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_restaurant_menu_adaptive"
        android:shortcutShortLabel="@string/NavItem_Speiseplan"
        android:shortcutLongLabel="@string/NavItem_Speiseplan"
        android:shortcutDisabledMessage="@string/NavItem_Speiseplan">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="de.fsrfb4.fb4"
            android:targetClass="de.fsrfb4.fb4.activities.MainActivity">
            <extra
                android:name="shortcut_fragment"
                android:value="menu"/>
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="news"
        android:enabled="true"
        android:icon="@mipmap/ic_shortcut_news_adaptive"
        android:shortcutShortLabel="@string/NavItem_Aktuelles"
        android:shortcutLongLabel="@string/NavItem_Aktuelles"
        android:shortcutDisabledMessage="@string/NavItem_Aktuelles">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="de.fsrfb4.fb4"
            android:targetClass="de.fsrfb4.fb4.activities.MainActivity">
            <extra
                android:name="shortcut_fragment"
                android:value="news"/>
        </intent>
    </shortcut>
</shortcuts>
